--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="86" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="de5-b7-o7C" id="VDE-mi-OV4">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="prj-fp-5UB">
@@ -122,6 +122,7 @@
                                         <rect key="frame" x="543" y="7" width="51" height="31"/>
                                         <connections>
                                             <action selector="manageNotificationState:" destination="wqG-UT-8Xb" eventType="valueChanged" id="gJj-3X-bsZ"/>
+                                            <action selector="notificationSwitch:" destination="wqG-UT-8Xb" eventType="valueChanged" id="og8-Xd-bmO"/>
                                         </connections>
                                     </switch>
                                 </subviews>
@@ -286,6 +287,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="AuC-HC-sc6"/>
+        <segue reference="Wk0-DP-BCX"/>
     </inferredMetricsTieBreakers>
 </document>
