--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                         <rect key="frame" x="0.0" y="86" width="600" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="de5-b7-o7C" id="VDE-mi-OV4">
-                                            <rect key="frame" x="0.0" y="0.0" width="567" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="567" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="prj-fp-5UB">
@@ -142,12 +142,21 @@
                                     </mask>
                                 </variation>
                             </view>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="h9o-ds-doT">
+                                <rect key="frame" x="290" y="290" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="4YY-vk-6Gs"/>
+                                    <constraint firstAttribute="width" constant="20" id="xGf-Mw-GQb"/>
+                                </constraints>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="eh5-7I-v6b" firstAttribute="bottom" secondItem="f3E-1T-gaF" secondAttribute="top" id="0sg-Jb-CyJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="eh5-7I-v6b" secondAttribute="trailing" id="9Ck-Lb-xVd"/>
                             <constraint firstItem="Vlm-kv-LDb" firstAttribute="bottom" secondItem="f3E-1T-gaF" secondAttribute="top" id="DtG-FA-veU"/>
+                            <constraint firstItem="h9o-ds-doT" firstAttribute="centerX" secondItem="lvX-Cg-0bS" secondAttribute="centerX" id="E3z-dv-FxA"/>
+                            <constraint firstItem="h9o-ds-doT" firstAttribute="centerY" secondItem="lvX-Cg-0bS" secondAttribute="centerY" id="FQB-pX-g0r"/>
                             <constraint firstAttribute="leadingMargin" secondItem="eh5-7I-v6b" secondAttribute="leading" id="Ltq-n3-Rt5"/>
                             <constraint firstItem="50W-wn-hfn" firstAttribute="trailing" secondItem="Vlm-kv-LDb" secondAttribute="trailing" id="MCP-iA-Gfm"/>
                             <constraint firstItem="Vlm-kv-LDb" firstAttribute="leading" secondItem="lvX-Cg-0bS" secondAttribute="leadingMargin" constant="-20" id="QGn-gn-TlK"/>
@@ -193,6 +202,7 @@
                         <outlet property="markButton" destination="K0Q-5W-MwZ" id="N7O-fD-fy0"/>
                         <outlet property="notificationSwitch" destination="Z5y-l3-YZY" id="lwR-0r-JIz"/>
                         <outlet property="shareButton" destination="kbN-hm-8Bn" id="jdS-gZ-92I"/>
+                        <outlet property="spinner" destination="h9o-ds-doT" id="4qd-dk-TYo"/>
                         <outlet property="tableView" destination="Vlm-kv-LDb" id="9O8-gI-tXV"/>
                         <outlet property="toolBar" destination="50W-wn-hfn" id="khD-G7-13N"/>
                         <outlet property="trashButton" destination="j1t-Ny-AH1" id="QOd-5m-jq7"/>
